Fix - User component is not showing

--- a/src/styles/Components/_home.scss
+++ b/src/styles/Components/_home.scss
@@ -1,7 +1,7 @@
 .home-page-container {
-  margin: 0 0 2 * $xlarge 0;
+  margin: 0;
   padding: $xlarge $small;
-  width: 95vw;
+  width: 100vw;
   // background: white;
 }
 
